syntax = "proto3";

option go_package = ".hackathon/generated";

service VrfyService {
  rpc Verify(VrfyRequest) returns (VrfyResponse) {}
}

message VrfyRequest {
  string email = 1;
}

message VrfyResponse {
  int32 status_code = 1;
  optional string error_message = 2;
}